# matrix-account-tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  matrix.rs  ui.rs
src/tools/: accounts.rs  common.rs  devices.rs  help.rs  home.rs  ignore_list.rs  leave_rooms.rs  mod.rs  profile.rs  rooms.rs
