[package]
name = "matrix-account-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matrix-account-tools"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Matrix SDK - use sqlite feature for session store (TLS is handled by reqwest's default)
matrix-sdk = { version = "0.17", default-features = false, features = [
    "sqlite",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Utilities
dirs = "6"
url = "2"
